--- a/Copy_of_tesla_10q_table.ipynb
+++ b/Copy_of_tesla_10q_table.ipynb
@@ -2778,6 +2778,28 @@
       "id": "YIfddg-6BGxd",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "https://github.com/neo4j-contrib/neo4j-apoc-procedures/blob/0f6b2c517db37637d2cfc92c446bcc71134fb07c/extended/src/main/java/apoc/ml/OpenAI.java#L108"
+      ],
+      "metadata": {
+        "id": "acu92PtPGNqU"
+      },
+      "id": "acu92PtPGNqU",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QEswMvU5GMop"
+      },
+      "id": "QEswMvU5GMop",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
